-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.0
-
None
-
-
87d12f7f21 (qt/qtbase/dev) 87d12f7f21 (qt/tqtc-qtbase/dev) 3beb8a742b (qt/qtbase/6.4) 3beb8a742b (qt/tqtc-qtbase/6.4)
While trying Wireshark 4.0.0rc2 on SPARC Solaris with Qt 6.4.0 I see following errors:
# QT_DEBUG_PLUGINS=1 wireshark ** (wireshark:16160) 15:36:36.949364 [GUI WARNING] -- checking directory path "/usr/lib/sparcv9/qt6/plugins/platforms" ... ** (wireshark:16160) 15:36:36.950089 [GUI WARNING] -- looking at "/usr/lib/sparcv9/qt6/plugins/platforms/libqminimal.so" ** (wireshark:16160) 15:36:36.950554 [GUI WARNING] -- Failed to find metadata in lib /usr/lib/sparcv9/qt6/plugins/platforms/libqminimal.so: '/usr/lib/sparcv9/qt6/plugins/platforms/libqminimal.so' is not a valid ELF object (file is for a different processor) ** (wireshark:16160) 15:36:36.950796 [GUI WARNING] -- "Failed to extract plugin meta data from '/usr/lib/sparcv9/qt6/plugins/platforms/libqminimal.so': '/usr/lib/sparcv9/qt6/plugins/platforms/libqminimal.so' is not a valid ELF object (file is for a different processor)" not a plugin ** (wireshark:16160) 15:36:36.950968 [GUI WARNING] -- looking at "/usr/lib/sparcv9/qt6/plugins/platforms/libqoffscreen.so" ** (wireshark:16160) 15:36:36.951243 [GUI WARNING] -- Failed to find metadata in lib /usr/lib/sparcv9/qt6/plugins/platforms/libqoffscreen.so: '/usr/lib/sparcv9/qt6/plugins/platforms/libqoffscreen.so' is not a valid ELF object (file is for a different processor) ** (wireshark:16160) 15:36:36.951427 [GUI WARNING] -- "Failed to extract plugin meta data from '/usr/lib/sparcv9/qt6/plugins/platforms/libqoffscreen.so': '/usr/lib/sparcv9/qt6/plugins/platforms/libqoffscreen.so' is not a valid ELF object (file is for a different processor)" not a plugin ** (wireshark:16160) 15:36:36.951591 [GUI WARNING] -- looking at "/usr/lib/sparcv9/qt6/plugins/platforms/libqxcb.so" ** (wireshark:16160) 15:36:36.951866 [GUI WARNING] -- Failed to find metadata in lib /usr/lib/sparcv9/qt6/plugins/platforms/libqxcb.so: '/usr/lib/sparcv9/qt6/plugins/platforms/libqxcb.so' is not a valid ELF object (file is for a different processor) ** (wireshark:16160) 15:36:36.952053 [GUI WARNING] -- "Failed to extract plugin meta data from '/usr/lib/sparcv9/qt6/plugins/platforms/libqxcb.so': '/usr/lib/sparcv9/qt6/plugins/platforms/libqxcb.so' is not a valid ELF object (file is for a different processor)" not a plugin ** (wireshark:16160) 15:36:36.952232 [GUI WARNING] -- looking at "/usr/lib/sparcv9/qt6/plugins/platforms/libqvnc.so" ** (wireshark:16160) 15:36:36.952503 [GUI WARNING] -- Failed to find metadata in lib /usr/lib/sparcv9/qt6/plugins/platforms/libqvnc.so: '/usr/lib/sparcv9/qt6/plugins/platforms/libqvnc.so' is not a valid ELF object (file is for a different processor) ** (wireshark:16160) 15:36:36.952685 [GUI WARNING] -- "Failed to extract plugin meta data from '/usr/lib/sparcv9/qt6/plugins/platforms/libqvnc.so': '/usr/lib/sparcv9/qt6/plugins/platforms/libqvnc.so' is not a valid ELF object (file is for a different processor)" not a plugin ** (wireshark:16160) 15:36:36.952837 [GUI WARNING] -- checking directory path "/usr/sbin/platforms" ... ** (wireshark:16160) 15:36:36.953084 [GUI WARNING] -- Could not find the Qt platform plugin "xcb" in "" ** (wireshark:16160) 15:36:36.953233 [GUI ERROR] -- This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem. Abort (core dumped)
Last time I tried Wireshark 4.0rc2 with Qt 6.3.2 on Intel Solaris there was no problem. So I guess this might be realated to SPARC (big endian platform).