Fix build with SPARC Solaris

Change-Id: I8969d7950f7c5b6164f87ab37f1089b7bc8cae8b
Done-by: Petr Šumbera
Fixes: QTBUG-107178
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 87d12f7f2178b1604635ec9beead5dc0a3fa74ee)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>